--- a/SomeProject/SomeProject/Properties/Resources.resx
+++ b/SomeProject/SomeProject/Properties/Resources.resx
@@ -118,8 +118,8 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="bmiManSoSo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bmiManSoSo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="tile_Volounters" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tile_Volounters.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="man" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\man.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -138,9 +138,6 @@
   </data>
   <data name="bmiWomanGood" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bmiWomanGood.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bmiWomanDefault" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bmiWomanDefault.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="icons8-о-нас-26" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-о-нас-26.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -172,17 +169,29 @@
   <data name="bmiWomanSoSo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bmiWomanSoSo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="teatro-municipal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\teatro-municipal.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icons8-упражнение-26" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-упражнение-26.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bmiManLack" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bmiManLack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="bmiCalc" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bmiCalc.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="tile_Volounters" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\tile_Volounters.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="bmiManLack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bmiManLack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bmiWomanDefault" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bmiWomanDefault.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tile_users" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tile_users.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bmiManSoSo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bmiManSoSo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bmiManBad" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bmiManBad.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="refresh_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\refresh_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -190,8 +199,8 @@
   <data name="icons8-результаты-теста-30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-результаты-теста-30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="tile_users" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\tile_users.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="map_PictureBoxLabel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\map_PictureBoxLabel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="woman" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\woman.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -211,7 +220,7 @@
   <data name="tile_Inventory" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tile_Inventory.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bmiManBad" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bmiManBad.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="marathon-image" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\marathon-image.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
