--- a/WSR Project/WSR Project/Properties/Resources.resx
+++ b/WSR Project/WSR Project/Properties/Resources.resx
@@ -214,4 +214,7 @@
   <data name="TeatroMunicipal" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TeatroMunicipal.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Azaza" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\azaza.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
